@@ -168,6 +168,7 @@
 #include <spot/twaalgos/word.hh>
 #include <spot/twaalgos/are_isomorphic.hh>
 #include <spot/twaalgos/rabin2parity.hh>
+#include <spot/twaalgos/toparity.hh>
 
 #include <spot/parseaut/public.hh>
 
@@ -632,6 +633,7 @@ def state_is_accepting(self, src) -> "bool":
 %template(list_bdd) std::list<bdd>;
 %include <spot/twaalgos/are_isomorphic.hh>
 %include <spot/twaalgos/rabin2parity.hh>
+%include <spot/twaalgos/toparity.hh>
 
 %pythonprepend spot::twa::dtwa_complement %{
   from warnings import warn
