@@ -27,6 +27,10 @@ New in spot 2.6.0.dev  (not yet released)
     twa_graph_ptr::is_empty(), twa_graph_ptr::intersects(), and
     scc_info::determine_unknown_acceptance().
 
+  - The new function spot::to_parity() translates an automaton
+    with arbitrary acceptance condition into a parity automaton,
+    based on a last-appearance record (LAR) construction.
+
 New in spot 2.6  (2018-07-04)
 
   Command-line tools:
